airs\refac(doc): #3153 updated cover
Former-commit-id: 2b4f7709aee5f453b17dc0db8f52afccd4f7b62c

--- a/airs/content/blog/hevd-dos/index.adoc
+++ b/airs/content/blog/hevd-dos/index.adoc
@@ -4,7 +4,7 @@
 :subtitle: How to crash Windows
 :tags: osee, training, exploit, windows, kernel, hevd
 :image: cover.png
-:alt: Photo by Caleb Woods on Unsplash
+:alt: Photo by Chaozzy Lin on Unsplash
 :description: This article will be the first approach to start exploting HackSys Extremely Vulnerable Driver with a Denial of Service
 :keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
 :author: Andres Roldan
@@ -12,7 +12,7 @@
 :name: Andres Roldan
 :about1: Cybersecurity Specialist, OSCE, OSCP, CHFI
 :about2: "We don't need the key, we'll break in" RATM
-:source: https://unsplash.com/photos/-Ifr1HGFeW8
+:source: https://unsplash.com/photos/k8riOACwZDg
 
 = HEVD: Denial of Service
 
