skims\feat(back): #3366.2 sensible info in props
Former-commit-id: 1775c0ec9dc63ac3200b4de3fecc02064c72c9a8

--- a/skims/static/translations/findings/F009.yaml
+++ b/skims/static/translations/findings/F009.yaml
@@ -1,3 +1,6 @@
+src.lib_path.f009.java_properties_sensitive_info:
+  en: Sensitive information in {path}
+  es: Información sensible en {path}
 src.lib_path.f009.aws_credentials.description:
   en: AWS credential in {path}
   es: Credencial de AWS en {path}
