--- a/airs/content/pages/rules/session/026/index.adoc
+++ b/airs/content/pages/rules/session/026/index.adoc
@@ -26,18 +26,24 @@ authentication tokens or data
 (such as store item pricing or wallet information) then even opaquely
 manipulating that data may bear fruit for an Attacker.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/642.html[CWE-642: External Control of Critical State Data].
+. [[r2]] link:http://capec.mitre.org/data/definitions/74.html[CAPEC-74: Manipulating State].
+The adversary modifies state information maintained by the target software or
+causes a state transition in hardware.
+If successful, the target will use this tainted state and execute in an
+unintended manner.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/642.html[CWE-642: External Control of Critical State Data].
 The software stores security-critical state information about its users,
 or the software itself, in a location that is accessible to unauthorized
 actors.
 
-. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+. [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
