--- a/airs/content/blog/hevd-smep-bypass/index.adoc
+++ b/airs/content/blog/hevd-smep-bypass/index.adoc
@@ -4,7 +4,7 @@
 :subtitle: Bypassing OS protections
 :tags: osee, training, exploit, windows, kernel, hevd
 :image: cover.png
-:alt: Photo by Basil James on Unsplash
+:alt: Photo by Michael Dziedzic on Unsplash
 :description: In this article we will defeat some protections using several techniques for exploting HackSys Extremely Vulnerable Driver
 :keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
 :author: Andres Roldan
@@ -12,7 +12,7 @@
 :name: Andres Roldan
 :about1: Cybersecurity Specialist, OSCE, OSCP, CHFI
 :about2: "We don't need the key, we'll break in" RATM
-:source: https://unsplash.com/photos/iC4BsZQaREg
+:source: https://unsplash.com/photos/1bjsASjhfkE
 
 = HEVD: kASRL + SMEP Bypass
 
@@ -52,11 +52,11 @@ to that buffer and overwriting `EIP` with the returned pointer.
 `ASLR` and `kASLR` (Kernel `ASLR`) is not an issue either, because it works
 by randomizing the base memory of the modules at every restart, but if we have
 local access, there are functions in the Windows API that will reveal the
-current base address.
+current kernel base address.
 
 However, other protections come to scene when trying to exploit at kernel
-level, like `DEP`, `SMEP`, `CFG`, etc. We will come across with some of them
-surely later. Stay tuned.
+level, like `DEP`, `SMEP`, `CFG`, etc. We will surely come across with some
+of them later. Stay tuned.
 
 == Stack Overflow exploitation
 
@@ -91,8 +91,8 @@ HANDLE = DeviceIoControl(DEVICE_NAME)
 HANDLE.ioctl(IOCTL_HEVD_STACK_OVERFLOW, PAYLOAD, SIZE, 0, 0)
 ----
 
-And we were able to overwrite EIP with the value `41414141`. If we are going
-to perform something more meaningful, we must start by locating the exact
+And we were able to overwrite `EIP` with the value `41414141`. If we are going
+to perform something more interesting, we must start by locating the exact
 offset on which `EIP` is overwritten. Just like on any other user-space
 exploitation process, we can create a cyclic pattern to find that offset.
 We can use `mona` to do that:
@@ -219,7 +219,8 @@ and `CPL3` or `ring-3` is where user mode instructions are performed.
 to execute code belonging to `ring-3`.
 
 The `ATTEMPTED_EXECUTE_OF_NOEXECUTE_MEMORY` exception was triggered
-because `HEVD` is executing at `ring-0` and our shellcode was allocated at
+because `HEVD` is executing at `ring-0` and after overwriting `EIP`, it was
+trying to run the instructions in our shellcode which was allocated at
 `ring-3`.
 
 Technically, `SMEP` is nothing but a bit in a CPU control register,
@@ -408,4 +409,4 @@ In this post we were able to execute a shellcode which made `EAX = 0xdeadbeef`.
 We also bypassed `SMEP` protection using a `kROP` chain and defeated `kASRL`
 by leaking the kernel base address from `ring-3`.
 However, we have still have to get a privileged shell on this system, which
-will be covered in the next article.
+will be covered in the link:../hevd-privilege-escalation/[next article].
