--- a/airs/content/pages/rules/source/154/index.adoc
+++ b/airs/content/pages/rules/source/154/index.adoc
@@ -30,21 +30,28 @@ This can allow the adversary to execute functionality not intended by the *API*
 implementation,
 possibly compromising the system which integrates the *API*.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/779.html[CWE-510: Trapdoor].
+. [[r2]] link:http://capec.mitre.org/data/definitions/115.html[CAPEC-115: Authentication Bypass].
+An attacker gains access to application, service, or device with the privileges
+of an authorized or privileged user by evading or circumventing an
+authentication mechanism.
+The attacker is therefore able to access protected data without authentication
+ever having taken place.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/779.html[CWE-510: Trapdoor].
 A trapdoor is a hidden piece of code that responds to a special input,
 allowing its user access to resources without passing through the normal
 security enforcement mechanism.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/1269.html[CWE-1269: Product Released in Non-Release Configuration].
+. [[r4]] link:https://cwe.mitre.org/data/definitions/1269.html[CWE-1269: Product Released in Non-Release Configuration].
 The product released to market is released in pre-production or manufacturing
 configuration.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.13)]
 Verify all code including third-party binaries, libraries, frameworks are
 reviewed for hardcoded credentials (*backdoors*).
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.2 Malicious Code Search.(10.2.3)]
 Verify that the application source code and third party libraries do not contain
 backdoors,
@@ -54,10 +61,10 @@ or anti-debugging, insecure debugging features,
 or otherwise out of date, insecure, or hidden functionality that could be used
 maliciously if discovered.
 
-. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.3.1]
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.3.1]
 Remove development, test and/or custom application accounts, user IDs,
 and passwords before applications become active or are released to customers.
 
-. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.4.4]
+. [[r8]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.4.4]
 Processes must include removal of test data and accounts from system components
 before the system becomes active / goes into production.
