airs\feat(doc): #3148.25 add capec refs to some rules
- Added CAPEC references to R078, R077, R261, R325
and R339
- Updated R261, R077, R325 and R339 keywords


Former-commit-id: e1330b5d82fbe60d1b713fc017049ebb84154bdd

--- a/airs/content/pages/rules/architecture/325/index.adoc
+++ b/airs/content/pages/rules/architecture/325/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/325/
 :category: architecture
 :description: This requirement establishes the importance of restricting access to WSDL files containing sensitive information.
-:keywords: WSDL, File, Web, Services, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: WSDL, File, Web, Services, ASVS, CAPEC, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R325. Protect WSDL files
@@ -25,7 +25,15 @@ then it must not contain any sensitive information.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/651.html[CWE-651: Exposure of WSDL File Containing Sensitive Information]
+. [[r1]] link:http://capec.mitre.org/data/definitions/116.html[CAPEC-116: Excavation].
+An adversary actively probes the target in a manner that is designed to solicit
+information that could be leveraged for malicious purposes.
+This is achieved by exploring the target via ordinary interactions for the
+purpose of gathering intelligence about the target,
+or by sending data that is syntactically invalid or non-standard in an attempt
+to produce a response that contains the desired data.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/651.html[CWE-651: Exposure of WSDL File Containing Sensitive Information]
 The Web services architecture may require exposing a Web Service Definition
 Language (WSDL) file that contains information on the publicly accessible
 services and how callers of these services should interact with them
