--- a/airs/content/pages/rules/social/261/index.adoc
+++ b/airs/content/pages/rules/social/261/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/261/
 :category: social
 :description: This requirement establishes the importance of not exposing corporate information on publicly accessible web pages and application sections.
-:keywords: Corporate, Personal, Security, Sensitive, ASVS, CWE, GDPR, ISO, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Corporate, Personal, Security, Sensitive, ASVS, CAPEC, CWE, GDPR, ISO, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R261. Avoid exposing sensitive information
@@ -26,38 +26,46 @@ social network accounts either.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/200.html[CWE-200: Exposure of Sensitive Information to an Unauthorized Actor].
+. [[r1]] link:http://capec.mitre.org/data/definitions/116.html[CAPEC-116: Excavation].
+An adversary actively probes the target in a manner that is designed to solicit
+information that could be leveraged for malicious purposes.
+This is achieved by exploring the target via ordinary interactions for the
+purpose of gathering intelligence about the target,
+or by sending data that is syntactically invalid or non-standard in an attempt
+to produce a response that contains the desired data.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/200.html[CWE-200: Exposure of Sensitive Information to an Unauthorized Actor].
 The product exposes sensitive information to an actor that is not explicitly
 authorized to have access to that information.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/359.html[CWE-359: Exposure of Private Personal Information to an Unauthorized Actor].
+. [[r3]] link:https://cwe.mitre.org/data/definitions/359.html[CWE-359: Exposure of Private Personal Information to an Unauthorized Actor].
 The product does not properly prevent a person's private, personal information
 from being accessed by actors who either are not explicitly authorized to
 access the information or do not have the implicit consent of the person about
 whom the information is collected.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/548.html[CWE-548: Exposure of Information Through Directory Listing].
+. [[r4]] link:https://cwe.mitre.org/data/definitions/548.html[CWE-548: Exposure of Information Through Directory Listing].
 A directory listing is inappropriately exposed,
 yielding potentially sensitive information to attackers.
 
-. [[r4]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
+. [[r5]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
 Art. 4: Security of processing.(1a)]
 The measures referred to in paragraph 1 shall at least ensure that personal
 data can be accessed only by authorized personnel for legally authorized
 purposes.
 
-. [[r5]] link:https://gdpr-info.eu/art-5-gdpr/[GDPR. Art. 5: Principles relating to processing of personal data.(1)(f).]
+. [[r6]] link:https://gdpr-info.eu/art-5-gdpr/[GDPR. Art. 5: Principles relating to processing of personal data.(1)(f).]
 Personal data shall be processed in a manner that ensures appropriate security
 of the personal data,
 including protection against unauthorized or unlawful processing and against
 accidental loss, destruction or damage.
 
-. [[r6]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 18.1.3]
+. [[r7]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 18.1.3]
 Protect records against loss, destruction, forgery, unauthorized access and
 unauthorized release,
 in accordance with legal, regulatory, contractual and business requirements.
 
-. [[r7]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
+. [[r8]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
 Many web applications and **API**s do not properly protect sensitive data,
 such as financial, healthcare, and *PII*.
 Attackers may steal or modify such weakly protected data to conduct credit card
@@ -66,13 +74,13 @@ Sensitive data may be compromised without extra protection,
 such as encryption at rest or in transit, and requires special precautions when
 exchanged with the browser.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.3 Other Access Control Considerations.(4.3.2)]
 Verify that directory browsing is disabled unless deliberately desired.
 Additionally, applications should not allow discovery or disclosure of file or
 directory metadata,
 such as Thumbs.db, .DS_Store, .git or .svn folders.
 
-. [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.7]
+. [[r10]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.7]
 Do not disclose private *IP* addresses and routing information to unauthorized
 parties.
